[ref] Use blank() to check wether string is only whitespace