@@ -153,7 +153,7 @@ public class ControllerHWinfoColumnConfiguration {
 
 				if (result) {
 					Object val = getValueAt(row, col);
-					if (val == null || (val instanceof String && ((String) val).trim().isEmpty())) {
+					if (val == null || (val instanceof String && ((String) val).isBlank())) {
 						result = false;
 					}
 				}
