@@ -34,7 +34,7 @@ public class CommandOpsiPackageManager implements SSHCommand {
 
 	@Override
 	public String getSecuredCommand() {
-		if (getSecureInfoInCommand() != null && !getSecureInfoInCommand().trim().isEmpty()) {
+		if (getSecureInfoInCommand() != null && !getSecureInfoInCommand().isBlank()) {
 			return getCommand().replace(getSecureInfoInCommand(), SSHCommandFactory.CONFIDENTIAL);
 		} else {
 			return getCommand();
