@@ -57,7 +57,7 @@ public class CommandPackageUpdater implements SSHCommand, SSHCommandNeedParamete
 
 	@Override
 	public String getSecuredCommand() {
-		if (getSecureInfoInCommand() != null && !getSecureInfoInCommand().trim().isEmpty()) {
+		if (getSecureInfoInCommand() != null && !getSecureInfoInCommand().isBlank()) {
 			return getCommand().replace(getSecureInfoInCommand(), SSHCommandFactory.CONFIDENTIAL);
 		} else {
 			return getCommand();
