@@ -65,7 +65,7 @@ public class CommandWget implements SSHCommand, SSHCommandNeedParameter {
 	}
 
 	public void setFileName(String newFilename) {
-		if (newFilename != null && !newFilename.trim().isEmpty()) {
+		if (newFilename != null && !newFilename.isBlank()) {
 			fileName = " --output-document=" + newFilename + " ";
 		}
 	}
@@ -131,7 +131,7 @@ public class CommandWget implements SSHCommand, SSHCommandNeedParameter {
 
 	@Override
 	public String getSecuredCommand() {
-		if (getSecureInfoInCommand() != null && !getSecureInfoInCommand().trim().isEmpty()) {
+		if (getSecureInfoInCommand() != null && !getSecureInfoInCommand().isBlank()) {
 			return getCommand().replace(getSecureInfoInCommand(), SSHCommandFactory.CONFIDENTIAL);
 		} else {
 			return getCommand();
